update cancel meeting

--- a/Content/uc_Tutor.tex
+++ b/Content/uc_Tutor.tex
@@ -72,10 +72,10 @@ Lịch rảnh của Tutor được cập nhật tương ứng. \\ \hline
 \textbf{Use Case ID} & UC-14 \\ \hline
 \textbf{Use Case Name} & Hủy buổi hẹn cho Tutor \\ \hline
 \textbf{Description} & Cho phép Tutor hủy buổi tư vấn hoặc lịch hẹn đã tạo khi có thay đổi trong lịch trình hoặc không thể tham gia. \\ \hline
-\textbf{Trigger} & Tutor chọn chức năng “Hủy buổi hẹn”. \\ \hline
+\textbf{Trigger} & Tutor chọn chức năng “Hủy buổi gặp mặt” trong mục "Buổi gặp mặt của tôi". \\ \hline
 \textbf{Primary Actor} & Tutor \\ \hline
 \textbf{Secondary Actor} & Sinh viên \\ \hline
-\textbf{Pre-condition} & - Tutor đã đăng nhập. \newline - Tutor đã tạo hoặc đăng ký buổi hẹn. \newline - Buổi hẹn chưa bắt đầu. \\ \hline
+\textbf{Pre-condition} & - Tutor đã đăng nhập. \newline - Tutor đã tạo hoặc đăng ký buổi gặp mặt. \newline - Buổi gặp mặt chưa bắt đầu. \\ \hline
 \textbf{Post-condition} & - Hủy thành công, hệ thống cập nhật slot. \newline - Sinh viên nhận thông báo hủy. \\ \hline
 \textbf{Normal flow} & 
 1. Tutor chọn “Buổi gặp mặt của tôi”. \newline
